--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,20 +1,25 @@
 {
-    "name": "@workspace/backend",
-    "type": "module",
-    "scripts": {
-        "dev": "convex dev",
-        "setup": "convex dev --until-success"
-    },
-    "exports": {
-        "./convex": "./convex/*.ts"
-    },
-    "devDependencies": {
-        "@types/node": "^20.19.9",
-        "@workspace/typescript-config": "workspace:*",
-        "typescript": "latest"
-    },
-    "dependencies": {
-        "@clerk/backend": "^2.22.0",
-        "convex": "1.25.4"
-    }
+  "name": "@workspace/backend",
+  "type": "module",
+  "scripts": {
+    "dev": "convex dev",
+    "setup": "convex dev --until-success"
+  },
+  "exports": {
+    "./convex": "./convex/*.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^20.19.9",
+    "@workspace/typescript-config": "workspace:*",
+    "typescript": "latest"
+  },
+  "dependencies": {
+    "@ai-sdk/google": "1.2.22",
+    "@ai-sdk/openai": "1.3.23",
+    "@clerk/backend": "^2.22.0",
+    "@convex-dev/agent": "^0.1.16",
+    "ai": "4.3.19",
+    "convex": "1.25.4",
+    "convex-helpers": "^0.1.104"
+  }
 }
