--- a/apps/widget/tsconfig.json
+++ b/apps/widget/tsconfig.json
@@ -7,9 +7,11 @@
       "@workspace/ui/*": ["../../packages/ui/src/*"],
       "@workspace/backend/*": ["../../packages/backend/convex/*"]
     },
-    "plugins": [{
-      "name": "next"
-    }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
